--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ compiler:
 sudo: false
 
 before_install:
-  - pushd . && if [ "$CXX" == "clang++" ]; then "./update-clang.sh"; fi && popd
-  - pushd . && if [ "$CXX" == "g++" ]; then "./update-gcc.sh"; fi && popd
-  - pushd . && "./update-cmake.sh" && popd
-  - pushd . && "./install-biicode.sh" && popd
+  - pushd . && if [ "$CXX" == "clang++" ]; then chmod +x "./update-clang.sh"    && "./update-clang.sh"; fi && popd
+  - pushd . && if [ "$CXX" ==     "g++" ]; then chmod +x "./update-gcc.sh"      && "./update-gcc.sh";   fi && popd
+  - pushd . &&                                  chmod +x "./update-cmake.sh"    && "./update-cmake.sh"     && popd
+  - pushd . &&                                  chmod +x "./install-biicode.sh" && "./install-biicode.sh"  && popd
 
 script:
   - clang --version
