--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,23 @@ compiler:
 #  - gcc
 
 sudo: false
+addons:
+  apt:
+    sources:
+    - kalakris-cmake
+    - llvm-toolchain-precise-3.7
+    - ubuntu-toolchain-r-test
+    packages:
+    - cmake
+    - clang++
+    - g++-5
 
 before_install:
 #  - pushd . &&                                  source "./update-cmake.sh"     && popd
   - pushd . &&                                  source "./install-biicode.sh"  && popd
-  - bii setup:cpp
-  - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
-  - pushd . && if [ "$CXX" ==     "g++" ]; then source "./update-gcc.sh";   fi && popd
+#  - bii setup:cpp
+#  - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
+#  - pushd . && if [ "$CXX" ==     "g++" ]; then source "./update-gcc.sh";   fi && popd
 
 script:
   - clang --version
