They aren't the default versions?

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,17 @@ sudo: false
 addons:
   apt:
     sources:
-    - kalakris-cmake
     - llvm-toolchain-precise-3.7
     - ubuntu-toolchain-r-test
     packages:
-    - cmake
-    - clang++
+    - clang-3.7
     - g++-5
 
 before_install:
 #  - pushd . &&                                  source "./update-cmake.sh"     && popd
   - pushd . &&                                  source "./install-biicode.sh"  && popd
-#  - bii setup:cpp
+  - clang++3.7 --version
+  - bii setup:cpp
 #  - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
 #  - pushd . && if [ "$CXX" ==     "g++" ]; then source "./update-gcc.sh";   fi && popd
 
