--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,16 @@ sudo: false
 addons:
   apt:
     sources:
-    - llvm-toolchain-precise-3.6
     - ubuntu-toolchain-r-test
     packages:
-    - clang-3.6
     - g++-5
 
 before_install:
 #  - pushd . &&                                  source "./update-cmake.sh"     && popd
   - pushd . &&                                  source "./install-biicode.sh"  && popd
-  - clang++-3.6 --version
   - gcc-5 --version
   - bii setup:cpp
-#  - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
+  - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
 #  - pushd . && if [ "$CXX" ==     "g++" ]; then source "./update-gcc.sh";   fi && popd
 
 script:
