--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,11 @@ addons:
     - g++-5
 
 before_install:
-#  - pushd . &&                                  source "./update-cmake.sh"     && popd
-  - pushd . &&                                  source "./install-biicode.sh"  && popd
-  - gcc-5 --version
+  - if [ "$CC"  == "gcc" ]; then export CC=gcc-5; fi
+  - if [ "$CXX" == "g++" ]; then export CXX=g++-5; fi
+  - pushd . && source "./install-biicode.sh"  && popd
   - bii setup:cpp
   - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
-#  - pushd . && if [ "$CXX" ==     "g++" ]; then source "./update-gcc.sh";   fi && popd
 
 script:
   - clang --version
