--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ before_install:
   - if [ "$CC"  == "gcc" ]; then export CC=gcc-5; fi
   - if [ "$CXX" == "g++" ]; then export CXX=g++-5; fi
   - pushd . && source "./install-biicode.sh"  && popd
-  - bii setup:cpp && export PATH="/home/travis/.biicode/cmake-3.0.2-Linux-64/bin:$PATH"
+  - pushd . && source "./update-cmake.sh"  && popd
+  - bii setup:cpp
   - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
 
 script:
