--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
   apt: true
   directories:
   - ".travis/cmake/build/install"
+  - ".travis/clang/install"
 
 before_install:
   - if [ "$CC"  == "gcc" ]; then export CC=gcc-5; fi
