--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,36 @@
 language: c++
-compiler:
-  - clang
-#  - gcc
-
 sudo: false
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - g++-5
+matrix:
+  include:
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-tolchain-precise
+          packages:
+            - clang-3.7
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
 cache:
   apt: true
   directories:
   - ".travis/cmake/build/install"
-  - ".travis/clang/install"
 
 before_install:
-  - if [ "$CC"  == "gcc" ]; then export CC=gcc-5; fi
-  - if [ "$CXX" == "g++" ]; then export CXX=g++-5; fi
+  - if [ "$CC"  == "gcc"     ]; then export CC=gcc-5; fi
+  - if [ "$CXX" == "g++"     ]; then export CXX=g++-5; fi
+  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.7; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.7; fi
   - pushd . && source "./install-biicode.sh" && popd
   - pushd . && source "./update-cmake.sh"    && popd
-  - bii setup:cpp
-  - pushd . && if [ "$CXX" == "clang++" ]; then source "./update-clang.sh"; fi && popd
 
 script:
   - bii --version
