--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ matrix:
       addons:
         apt:
           sources:
-            - ubuntu-toolchain-r-test
-            - llvm-tolchain-precise
+            - llvm-toolchain-precise
           packages:
             - clang-3.7
     - os: linux
