--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: c++
 sudo: false
 matrix:
   include:
-    - os: linux
+    - os: osx
       compiler: clang
       addons:
         apt:
           sources:
             - llvm-toolchain-precise
           packages:
-            - clang-3.5
+            - clang-3.7
     - os: linux
       compiler: gcc
       addons:
@@ -26,8 +26,8 @@ cache:
 before_install:
   - if [ "$CC"  == "gcc"     ]; then export CC=gcc-5; fi
   - if [ "$CXX" == "g++"     ]; then export CXX=g++-5; fi
-  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.5; fi
-  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.5; fi
+  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.7; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.7; fi
   - pushd . && source "./install-biicode.sh" && popd
   - pushd . && source "./update-cmake.sh"    && popd
 
