--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,27 @@ language: c++
 sudo: false
 matrix:
   include:
-    - os: osx
+    - os: linux
       compiler: clang
       addons:
         apt:
           sources:
             - llvm-toolchain-precise
+            - llvm-toolchain-precise-3.7
+            - llvm-toolchain-precise-3.8
+            - llvm-toolchain
+            - llvm-toolchain-3.7
+            - llvm-toolchain-3.8
           packages:
-            - clang-3.7
-    - os: linux
-      compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-5
+            - clang-3.8
+#    - os: linux
+#      compiler: gcc
+#      addons:
+#        apt:
+#          sources:
+#            - ubuntu-toolchain-r-test
+#          packages:
+#            - g++-5
 cache:
   apt: true
   directories:
@@ -26,8 +31,8 @@ cache:
 before_install:
   - if [ "$CC"  == "gcc"     ]; then export CC=gcc-5; fi
   - if [ "$CXX" == "g++"     ]; then export CXX=g++-5; fi
-  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.7; fi
-  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.7; fi
+  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.8; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.8; fi
   - pushd . && source "./install-biicode.sh" && popd
   - pushd . && source "./update-cmake.sh"    && popd
 
