--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ matrix:
       addons:
         apt:
           sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise
             - llvm-toolchain-precise-3.7
           packages:
-            - clang-3.7
+            - clang-.*
 #    - os: linux
 #      compiler: gcc
 #      addons:
@@ -26,8 +28,8 @@ cache:
 before_install:
   - if [ "$CC"  == "gcc"     ]; then export CC=gcc-5; fi
   - if [ "$CXX" == "g++"     ]; then export CXX=g++-5; fi
-  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.7; fi
-  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.7; fi
+  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.8; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.8; fi
   - pushd . && source "./install-biicode.sh" && popd
   - pushd . && source "./update-cmake.sh"    && popd
 
