--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,13 @@ matrix:
             - llvm-toolchain-precise
             - llvm-toolchain-precise-3.7
           packages:
-            - clang-.*
+            - clang
+            - clang-3.5
+            - clang-3.6
+            - clang-3.7
+            - clang-3.8
+            - clang-dev
+            - clang-snapshot
 #    - os: linux
 #      compiler: gcc
 #      addons:
