So it isn't me being stupid? https://github.com/travis-ci/apt-package-whitelist/pull/561#issuecomment-143788954

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,14 +15,14 @@ matrix:
             - clang-3.6
             - clang-3.7
             - clang-3.8
-#    - os: linux
-#      compiler: gcc
-#      addons:
-#        apt:
-#          sources:
-#            - ubuntu-toolchain-r-test
-#          packages:
-#            - g++-5
+    - os: linux
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
 cache:
   apt: true
   directories:
@@ -31,8 +31,8 @@ cache:
 before_install:
   - if [ "$CC"  == "gcc"     ]; then export CC=gcc-5; fi
   - if [ "$CXX" == "g++"     ]; then export CXX=g++-5; fi
-#  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.8; fi
-#  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.8; fi
+  - if [ "$CC"  == "clang"   ]; then export CC=clang-3.8; fi
+  - if [ "$CXX" == "clang++" ]; then export CXX=clang++-3.8; fi
   - pushd . && source "./install-biicode.sh" && popd
   - pushd . && source "./update-cmake.sh"    && popd
 
@@ -41,11 +41,6 @@ script:
   - cmake --version
   - $CC --version
   - $CXX --version
-  - clang-3.4 --version
-  - clang-3.5 --version
-  - clang-3.6 --version
-  - clang-3.7 --version
-  - clang-3.8 --version
 
 notifications:
   email: false
