--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ cache:
   apt: true
   directories:
   - ".travis/cmake/build/install"
-#  - ".travis/boost-install"
+  - ".travis/boost-install"
 
 before_install:
   - if [ "$CC"  == "gcc"     ]; then export CC=gcc-5; fi
