--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
+            - libcurl-dev
 cache:
   apt: true
   directories:
